--- a/src/test/java/resourceFiles/productItemsToBeRemoved.properties
+++ b/src/test/java/resourceFiles/productItemsToBeRemoved.properties
@@ -1,2 +1,6 @@
 product1 = Sauce Labs Backpack
 product2 = Sauce Labs Bike Light
+product3 = Sauce Labs Bolt T-Shirt
+product4 = Sauce Labs Fleece Jacket
+product5 = Sauce Labs Onesie
+product6 = Test.allTheThings() T-Shirt (Red)
